--- a/views/back/aside.html
+++ b/views/back/aside.html
@@ -94,7 +94,7 @@
             window.location.href = "/back/login";
         }
 
-        //2.处理点击选中
+        //2.处理点击选中完成
         $("#lk_item>li>a").on("click",function () {
             //2.0 判断
             if($(this).attr("tag")!=="four"){
